# audibot

./: .gitignore  .travis.yml  LICENSE  README.md
audibot/: CHANGELOG.rst  CMakeLists.txt  package.xml
audibot_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
audibot_description/env-hooks/: audibot_description.dsv.in
audibot_description/meshes/: meshes.tar.xz
audibot_description/urdf/: audibot.urdf.xacro
audibot_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
audibot_gazebo/include/audibot_gazebo/: AudibotInterfacePlugin.h  AudibotInterfacePlugin.hpp
audibot_gazebo/launch/: audibot_named_robot.launch  audibot_robot.launch  audibot_robot.launch.py  single_vehicle_example.launch  single_vehicle_example.launch.py  two_vehicle_example.launch  two_vehicle_example.launch.py
audibot_gazebo/rviz/: single_vehicle_example.rviz  two_vehicle_example.rviz
audibot_gazebo/scripts/: tf_prefixer.py
audibot_gazebo/src/: AudibotInterfacePlugin.cpp
audibot_gazebo/tests/: CMakeLists.txt  audibot_tests.py  audibot_tests.test  joint_state_topic_test.py  spawn_model_test.py  twist_topic_test.py
