<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>audibot</name>
  <version>0.2.1</version>
  <description>
    Metapackage for audibot
  </description>
  <maintainer email="mradov@gmail.com">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>audibot_gazebo</exec_depend>
  <exec_depend>audibot_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
