<?xml version="1.0"?>
<package format="2">
  <name>audibot_description</name>
  <version>0.2.1</version>
  <description>
    Meshes and URDF descriptions for audibot
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
