<?xml version="1.0"?>
<package format="2">
  <name>audibot_gazebo</name>
  <version>0.1.0</version>
  <description>
    Gazebo model plugin to simulate Audibot
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>

  <test_depend>rospy</test_depend>
  <test_depend>rostest</test_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>rviz</exec_depend>
</package>
